bitfield/tests/11-bits-attribute-wrong.stderr
error[E0080]: evaluation of constant value failed
  --> tests/11-bits-attribute-wrong.rs:11:5
   |
11 |     #[bits = 9]
   |     ^ the evaluated program panicked at 'the field size is 1 bit(s), must be 9 bit(s)', $DIR/tests/11-bits-attribute-wrong.rs:11:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
